--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 .flex-container {
     display: flex;
+    justify-content: space-around;
 }
 
 #nav {
@@ -7,23 +8,20 @@
 }
 
 #logo {
-    padding-left: 60px;
     height: 100px;
-    display: inline-block;
+    float: left;
+    padding-left: 80px;
+    padding-top: 20px;
+}
+
+#sv {
     flex-direction: row;
-
 }
-#sv{
- padding: 100px;
- flex-direction: row;
-}
-#iv{
- padding: 100px;
- flex-direction: row;
 
+#iv {
+    flex-direction: row;
 }
-#vv{
- padding: 100px;
- flex-direction: row;
 
+#vv {
+    flex-direction: row;
 }
