--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 .flex-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: start;
 }
 
 #nav {
-    list-style: none;
+    padding-top: 10px;
+    padding-left: 80px;
 }
 
 #logo {
@@ -16,12 +17,49 @@
 
 #sv {
     flex-direction: row;
+    padding: 50px;
+    font-size: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#sv:hover {
+    color: orangered;
+    text-decoration: underline black;
+    transition-duration: 1s;
 }
 
 #iv {
     flex-direction: row;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    padding: 50px;
+}
+
+#iv:hover {
+    color: orangered;
+    text-decoration: underline black;
+    transition-duration: 1s;
 }
 
 #vv {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     flex-direction: row;
+    font-size: 25px;
+    padding: 50px;
+}
+
+#vv:hover {
+    color: orangered;
+    text-decoration: underline black;
+    transition-duration: 1s;
+}
+
+#bt {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    border-radius: 70px;
+    padding: 25px;
+    background-color: black;
+    color: white;
+
 }
