--- a/style.css
+++ b/style.css
@@ -61,5 +61,10 @@
     padding: 25px;
     background-color: black;
     color: white;
+}
 
+#bt:hover{
+    background-color: white;
+    color: black;
+    transition-duration: 1s;
 }
