--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .flex-container {
     display: flex;
     justify-content: start;
+    box-shadow: 5px 10px 5px whitesmoke;
 }
 
 #nav {
@@ -12,7 +13,7 @@
     height: 100px;
     float: left;
     padding-left: 80px;
-    padding-top: 20px;
+    padding-top: 15px;
 }
 
 #sv {
@@ -56,8 +57,8 @@
 
 #bt {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
-    border-radius: 70px;
+    font-size: 23px;
+    border-radius: 40px;
     padding: 25px;
     background-color: black;
     color: white;
