--- a/style.css
+++ b/style.css
@@ -89,3 +89,14 @@
     font-size: 100px;
     padding-left: 110px;
 }
+#t4{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: justify;
+    width: 25%;
+    word-spacing: 10px;
+    font-size: 20px;
+    padding-left: 110px;
+    font-weight:lighter;
+
+
+}
