--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@
     display: block;
     font-size: 100px;
     padding-left: 110px;
-    color:turquoise;
+    color:darkseagreen;
 }
 #t3{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
