--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: start;
     box-shadow: 5px 10px 5px whitesmoke;
+
 }
 
 #nav {
@@ -97,4 +98,9 @@
     font-size: 20px;
     padding-left: 110px;
     font-weight:lighter;
+    float: left;
+}
+#t5{
+    height: 500px;
+    border-radius: 600px; 
 }
