--- a/style.css
+++ b/style.css
@@ -65,42 +65,42 @@
     color: white;
 }
 
-#bt:hover{
+#bt:hover {
     background-color: white;
     color: black;
     transition-duration: 1s;
 }
-#t1{
+
+#t1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display: block;
-    font-size: 100px;
     padding-left: 110px;
-    padding-top: 30px;
+    font-size: 85px;
 }
-#t2{
+
+#t2 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display: block;
-    font-size: 100px;
     padding-left: 110px;
-    color:lightseagreen;
+    color: lightseagreen;
+    font-size: 85px;
 }
-#t3{
+
+#t3 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display: block;
-    font-size: 100px;
     padding-left: 110px;
+    font-size: 85px;
 }
-#t4{
+
+#t4 {
     text-align: justify;
     width: 25%;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
     font-size: 22px;
     padding-left: 110px;
-    font-weight:lighter;
-    display: block;
+    font-weight: lighter;
 }
-#b1{
+
+/* #b1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     border-radius: 50px;
@@ -109,4 +109,4 @@
     color: white;
     margin-left: 100px;
     margin-top: 20px;
-}
+} */
