--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@
 
 #t4 {
     text-align: justify;
-    width: 25%;
+    width: 50%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
     font-size: 22px;
@@ -100,7 +100,7 @@
     font-weight: lighter;
 }
 
-/* #b1{
+#b1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     border-radius: 50px;
@@ -108,5 +108,23 @@
     background-color: black;
     color: white;
     margin-left: 100px;
-    margin-top: 20px;
-} */
+}
+
+#a1 {
+    height: 450px;
+    border-radius: 500px;
+    margin-right: 175px;
+    margin-top: 100px;
+}
+
+#left {
+    display: inline-block;
+}
+
+#right {
+    display: inline-block;
+}
+
+#main {
+    display: flex;
+}
