--- a/p2.css
+++ b/p2.css
@@ -1,4 +1,4 @@
-/* #tit {
+#tit {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 60px;
     margin-left: 90px;
@@ -22,4 +22,4 @@
     font-size: 22px;
     font-weight: lighter;
     padding-left: 280px;
-} */
+}
