--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
     float: left;
     padding-left: 80px;
     padding-top: 15px;
+    cursor: pointer;
 }
 
 #sv {
@@ -22,12 +23,14 @@
     padding: 50px;
     font-size: 25px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
 
 #sv:hover {
     color: orangered;
     text-decoration: underline black;
     transition-duration: 1s;
+    cursor: pointer;
 }
 
 #iv {
@@ -41,6 +44,7 @@
     color: orangered;
     text-decoration: underline black;
     transition-duration: 1s;
+    cursor: pointer;
 }
 
 #vv {
@@ -54,6 +58,7 @@
     color: orangered;
     text-decoration: underline black;
     transition-duration: 1s;
+    cursor: pointer;
 }
 
 #bt {
@@ -69,6 +74,7 @@
     background-color: white;
     color: black;
     transition-duration: 1s;
+    cursor: pointer;
 }
 
 #t1 {
@@ -108,6 +114,7 @@
     background-color: black;
     color: white;
     margin-left: 100px;
+    cursor: pointer;
 }
 
 #a1 {
