--- a/boxs.css
+++ b/boxs.css
@@ -1,9 +1,43 @@
-#box1{
+#box1 {
     width: 900px;
     height: 540px;
-    background-color: orange;
+    background-color: darkorange;
     margin-top: 75px;
     margin-left: 30px;
+    display: flex;
 }
 
+#head {
+    color: white;
+    font-size: 60px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 40px;
+}
 
+#no {
+    color: white;
+    font-size: 40px;
+    text-decoration: underline;
+    padding: 40px;
+    font-weight: bolder;
+}
+
+#a2 {
+    color: white;
+    width: 35%;
+    text-align: justify;
+    word-spacing: 10px;
+    font-size: 22px;
+    padding-left: 40px;
+}
+
+#b2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    border-radius: 50px;
+    padding: 15px;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    margin-left: 35px;
+}
