--- a/boxs.css
+++ b/boxs.css
@@ -47,3 +47,41 @@
     mask-repeat: no-repeat;
     margin-top: 120px;
 }
+
+#box2 {
+    width: 1000px;
+    height: 650px;
+    background-color: blue;
+    margin-top: 75px;
+    margin-left: 30px;
+    display: flex;
+}
+
+#a3 {
+    color: white;
+    width: 97%;
+    text-align: justify;
+    word-spacing: 10px;
+    font-size: 25px;
+    padding-left: 40px;
+}
+
+#right2 {
+    mask-image: url("ink-black-color-smoke-blot-drop-png-transparent_933071-6-removebg-preview.png");
+    mask-repeat: no-repeat;
+    margin-top: 120px;
+}
+
+#box3 {
+    width: 1000px;
+    height: 630px;
+    background-color:cadetblue;
+    margin-top: 75px;
+    margin-left: 30px;
+    display: flex;
+}
+#right3 {
+    mask-image: url("ink-black-color-smoke-blot-drop-png-transparent_933071-6-removebg-preview.png");
+    mask-repeat: no-repeat;
+    margin-top: 120px;
+}
