--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     flex-direction: row;
     padding: 50px;
     font-size: 25px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;   
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #sv:hover {
@@ -132,4 +132,119 @@
 
 #main {
     display: flex;
+}
+
+#tit {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 60px;
+    margin-left: 90px;
+}
+
+#au {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: block;
+    font-size: 49px;
+    color: lightseagreen;
+    text-decoration: overline;
+    padding-left: 280px;
+    padding-top: 40px;
+}
+
+#p {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 35%;
+    text-align: justify;
+    word-spacing: 10px;
+    font-size: 27px;
+    font-weight: lighter;
+    padding-left: 280px;
+}
+
+#box1 {
+    width: 1000px;
+    height: 600px;
+    background-color: darkorange;
+    margin-top: 75px;
+    margin-left: 30px;
+    display: flex;
+}
+
+#head {
+    color: white;
+    font-size: 60px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 40px;
+}
+
+#no {
+    color: white;
+    font-size: 40px;
+    text-decoration: underline;
+    padding: 40px;
+    font-weight: bolder;
+}
+
+#a2 {
+    color: white;
+    width: 70%;
+    text-align: justify;
+    word-spacing: 10px;
+    font-size: 25px;
+    padding-left: 40px;
+}
+
+#b2 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    border-radius: 50px;
+    padding: 15px;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    margin-left: 35px;
+}
+
+#right1 {
+    mask-image: url("ink-black-color-smoke-blot-drop-png-transparent_933071-6-removebg-preview.png");
+    mask-repeat: no-repeat;
+    margin-top: 120px;
+}
+
+#box2 {
+    width: 1000px;
+    height: 650px;
+    background-color: blue;
+    margin-top: 75px;
+    margin-left: 30px;
+    display: flex;
+}
+
+#a3 {
+    color: white;
+    width: 97%;
+    text-align: justify;
+    word-spacing: 10px;
+    font-size: 25px;
+    padding-left: 40px;
+}
+
+#right2 {
+    mask-image: url("ink-black-color-smoke-blot-drop-png-transparent_933071-6-removebg-preview.png");
+    mask-repeat: no-repeat;
+    margin-top: 120px;
+}
+
+#box3 {
+    width: 1000px;
+    height: 630px;
+    background-color: cadetblue;
+    margin-top: 75px;
+    margin-left: 30px;
+    display: flex;
+}
+
+#right3 {
+    mask-image: url("ink-black-color-smoke-blot-drop-png-transparent_933071-6-removebg-preview.png");
+    mask-repeat: no-repeat;
+    margin-top: 120px;
 }
