--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 60px;
     margin-left: 90px;
+    margin-top: 150px;
 }
 
 #au {
@@ -148,6 +149,7 @@
     text-decoration: overline;
     padding-left: 280px;
     padding-top: 40px;
+    
 }
 
 #p {
