--- a/sec3.css
+++ b/sec3.css
@@ -2,4 +2,9 @@
     text-align: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 60px;
+    padding-right: 100px;
+    padding-top: 30px;
+}
+#sl{
+    
 }
