--- a/sec3.css
+++ b/sec3.css
@@ -6,5 +6,11 @@
     padding-top: 30px;
 }
 #sl{
-    
+    text-align: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-right: 100px;
+    padding-top: 30px;
+    font-size: 49px;
+    color: lightseagreen;
+    text-decoration: overline;
 }
