--- a/sec3.css
+++ b/sec3.css
@@ -16,4 +16,11 @@
     text-decoration: overline;
 }
 
+#main2 {
+    display: flex;
+}
 
+#a4{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 30px;
+}
