--- a/sec3.css
+++ b/sec3.css
@@ -21,44 +21,86 @@
     justify-content: space-evenly;
 }
 
-#a4{
+#a4 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 40px;
     padding-left: 80px;
 }
-#a5{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 40px;
-  
-}
-#a6{
+
+#a5 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 40px;
 }
-#c1{
-    text-align: justify;
-    width: 90%;
+
+#a6 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+}
+
+#c1 {
+    width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
     font-size: 26px;
     padding-left: 80px;
 }
-#c2{
-    text-align: justify;
-    width: 90%;
+
+#c2 {
+    width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
     font-size: 26px;
-    
+
 }
-#c3{
-    text-align: justify;
-    width: 90%;
+
+#c3 {
+    width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
     font-size: 26px;
 }
-.parts{
-    width: 30%;
-  padding: 80px;
+
+.parts {
+    width: 33%;
+    padding: 80px;
+    padding-bottom: 0;
+    padding-top: 0;
+}
+
+#a7 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+    padding-left: 80px
+}
+
+#c4 {
+    width: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    word-spacing: 10px;
+    font-size: 26px;
+    padding-left: 80px;
+}
+
+#a8 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+}
+
+#c5 {
+    width: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    word-spacing: 10px;
+    font-size: 26px;
+}
+
+#a9 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+}
+
+#c6 {
+    width: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    word-spacing: 10px;
+    font-size: 26px;
 }
