--- a/sec4.css
+++ b/sec4.css
@@ -1,12 +1,29 @@
-#tl{
+#tl {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 75px;
     margin-top: 250px;
     padding-left: 100px;
 }
-#p1{
+
+#p1 {
     float: right;
     width: 700px;
     margin-top: -200px;
     margin-right: 100px;
+}
+
+#d {
+    font-size: 60px;
+    padding-left: 100px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: lightseagreen;
+}
+
+#d1 {
+    width: 45%;
+    font-weight: lighter;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    word-spacing: 10px;
+    padding-left: 100px;
+    font-size: 26px;
 }
