--- a/sec4.css
+++ b/sec4.css
@@ -32,5 +32,11 @@
     background-repeat: no-repeat;
     background-position-x: right;
     width: 100%;
-    height: 800px;  
+    height: 900px;  
+}
+#d2{
+    font-size: 65px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-left: 150px;
+    margin-top: 220px;
 }
