--- a/sec4.css
+++ b/sec4.css
@@ -41,7 +41,7 @@
     font-size: 65px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-left: 150px;
-    margin-top: 220px;
+    /* margin-top: 220px; */
 }
 
 #img {
