--- a/style.css
+++ b/style.css
@@ -362,3 +362,61 @@
     background-repeat: no-repeat;
     background-position-y: 100px;
 }
+
+#tl {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 75px;
+    margin-top: 250px;
+    padding-left: 100px;
+}
+
+#p1 {
+    float: right;
+    width: 700px;
+    margin-top: -200px;
+    margin-right: 100px;
+}
+
+#d {
+    font-size: 60px;
+    padding-left: 100px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: lightseagreen;
+}
+
+#d1 {
+    width: 45%;
+    font-weight: lighter;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    word-spacing: 10px;
+    padding-left: 100px;
+    font-size: 26px;
+}
+
+#main5 {
+    background-image: url("https://media1.giphy.com/media/0p83n7lR4Rsj0gEiza/giphy.gif?cid=6c09b952r7nl5un4pau3g8tngqjth4kon3jn7y5r83xekgwf&ep=v1_internal_gif_by_id&rid=giphy.gif&ct=s");
+    background-repeat: no-repeat;
+    background-position-x: right;
+    margin-bottom: 500px;
+    width: 100%;
+    height: 700px;
+}
+
+#d2 {
+    font-size: 65px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-left: 150px;
+    /* margin-top: 220px; */
+}
+
+#img {
+    /* display: flex;
+    justify-content: space-evenly; */
+    flex-wrap: wrap;
+}
+
+.p2 {
+    width: 200px;
+    height: 100px;
+    padding: 100px;
+}
