--- a/style.css
+++ b/style.css
@@ -406,12 +406,11 @@
     font-size: 65px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-left: 150px;
-    /* margin-top: 220px; */
+    margin-top: 220px;
 }
 
 #img {
-    /* display: flex;
-    justify-content: space-evenly; */
+    display: flex;
     flex-wrap: wrap;
 }
 
