--- a/sec5.css
+++ b/sec5.css
@@ -3,16 +3,36 @@
     width: 100%;
     height: 800px;
    display: flex;
-   padding-left: 150px;
-   padding-top: 100px;
 }
 
 #circle {
     display: flex;
     width: 100%;
-
+    
 }
-#d3{
+.sec{
+    padding: 90px;
+    width: 10%; 
+    height: 30%; 
+}
+.d3{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 30px;
+    font-size: 25px;
+}   
+#e1{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 300px;
+    height: 100px;
+    font-size: 25px;
+    font-weight: lighter;
+    display: inline-block;
 }
+li{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    list-style: none;
+    font-size: 25px;
+}
+li:hover{
+    color: darkcyan;
+    transition:1s;
+}  
