--- a/sec5.css
+++ b/sec5.css
@@ -1,25 +1,28 @@
 .footer {
-    background-color:chocolate;
+    background-color: rgb(220, 106, 0);
     width: 100%;
     height: 800px;
-   display: flex;
+    display: flex;
 }
 
 #circle {
     display: flex;
     width: 100%;
-    
+
 }
-.sec{
+
+.sec {
     padding: 90px;
-    width: 10%; 
-    height: 30%; 
+    width: 10%;
+    height: 30%;
 }
-.d3{
+
+.d3 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 25px;
-}   
-#e1{
+}
+
+#e1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 300px;
     height: 100px;
@@ -27,12 +30,26 @@
     font-weight: lighter;
     display: inline-block;
 }
-li{
+
+li {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     list-style: none;
     font-size: 25px;
 }
-li:hover{
+
+li:hover {
     color: darkcyan;
-    transition:1s;
-}  
+    transition: 1s;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+}
+#add{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+}
