--- a/sec5.css
+++ b/sec5.css
@@ -15,6 +15,7 @@
     padding: 90px;
     width: 10%;
     height: 30%;
+    align-content: space-around;
 }
 
 .d3 {
@@ -52,11 +53,11 @@ li:hover {
 
 #add {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
+    font-size: 24px;
     display: inline;
 }
 
 #pno {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
+    font-size: 22px;
 }
