--- a/sec5.css
+++ b/sec5.css
@@ -59,5 +59,14 @@ li:hover {
 
 #pno {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 22px;
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 40
 }
