--- a/sec5.css
+++ b/sec5.css
@@ -63,6 +63,12 @@ li:hover {
     font-weight: bolder;
 }
 
+#email{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    font-weight: bolder;
+}
+
 .material-symbols-outlined {
     font-variation-settings:
         'FILL' 0,
