--- a/sec5.css
+++ b/sec5.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: rgb(220, 106, 0);
     width: 100%;
-    height: 800px;
+    /* height: 800px; */
     display: flex;
 }
 
@@ -74,4 +74,14 @@ li:hover {
         'wght' 400,
         'GRAD' 0,
         'opsz' 40
+}
+#line{
+    border-top: 2px solid rgb(220, 106, 0);
+    background-color: rgb(220, 106, 0);
+    width: 100%;
+    height: 300px;
+
+}
+#hert{
+    height: 120px;
 }
