--- a/sec5.css
+++ b/sec5.css
@@ -83,5 +83,12 @@ li:hover {
 
 }
 #hert{
-    height: 120px;
+    height: 100px;
+}
+#vq{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    font-weight:100;
+    text-align: center;
+    padding-top: 35px;
 }
