--- a/style.css
+++ b/style.css
@@ -419,3 +419,99 @@
     height: 100px;
     padding: 100px;
 }
+
+.footer {
+    background-color: rgb(220, 106, 0);
+    width: 100%;
+    display: flex;
+}
+
+#circle {
+    display: flex;
+    width: 100%;
+}
+
+.sec {
+    padding: 90px;
+    width: 10%;
+    height: 30%;
+    align-content: space-around;
+}
+
+.d3 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+}
+
+#e1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 300px;
+    height: 100px;
+    font-size: 25px;
+    font-weight: lighter;
+    display: inline-block;
+}
+
+li {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    list-style: none;
+    font-size: 25px;
+}
+
+li:hover {
+    color: darkcyan;
+    transition: 1s;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 24;
+}
+
+#add {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 24px;
+    display: inline;
+}
+
+#pno {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+#email {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 21px;
+    font-weight: bolder;
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+        'FILL' 0,
+        'wght' 400,
+        'GRAD' 0,
+        'opsz' 40
+}
+
+#line {
+    border-top: 2px solid rgb(220, 106, 0);
+    background-color: rgb(220, 106, 0);
+    width: 100%;
+    height: 300px;
+}
+
+#hert {
+    height: 100px;
+}
+
+#vq {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 25px;
+    font-weight: 100;
+    text-align: center;
+    padding-top: 35px;
+}
