--- a/style.css
+++ b/style.css
@@ -4,14 +4,16 @@
 }
 
 .flex-container {
-    justify-content: start;
+    justify-content: end;
     width: 100%;
     box-shadow: 5px 10px 5px whitesmoke;
 }
 
 #nav {
-    padding-top: 10px;
-    padding-left: 80px;
+    min-width: 70%;
+    text-align: end;
+    padding-right: 80px;
+    align-content: center;
 }
 
 #logo {
@@ -403,7 +405,7 @@
     background-position-x: right;
     margin-bottom: 500px;
     width: 100%;
-    height: 700px;
+    margin-bottom: 200px;
 }
 
 #d2 {
@@ -416,6 +418,7 @@
 #img {
     display: flex;
     flex-wrap: wrap;
+    position: sticky;
 }
 
 .p2 {
@@ -518,8 +521,4 @@ li:hover {
     font-weight: 100;
     text-align: center;
     padding-top: 35px;
-}
-
-#main6 {
-    padding-top: 650px;
 }
