--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
 }
+
 body{
     margin: 0;
     padding: 0;
@@ -108,7 +109,7 @@ body{
     width: 50%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
-    font-size: 27px;
+    font-size: 24px;
     padding-left: 110px;
     font-weight: lighter;
 }
@@ -152,7 +153,7 @@ body{
 
 #au {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 49px;
+    font-size: 45px;
     color: lightseagreen;
     text-decoration: overline;
     padding-left: 280px;
@@ -165,7 +166,7 @@ body{
     width: 35%;
     text-align: justify;
     word-spacing: 10px;
-    font-size: 27px;
+    font-size: 24px;
     font-weight: lighter;
     padding-left: 280px;
 }
@@ -179,14 +180,14 @@ body{
     display: flex;
 }
 
-#head {
+.head {
     color: white;
     font-size: 60px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 40px;
 }
 
-#no {
+.no {
     color: white;
     font-size: 40px;
     text-decoration: underline;
@@ -199,8 +200,10 @@ body{
     width: 70%;
     text-align: justify;
     word-spacing: 10px;
-    font-size: 25px;
+    font-size: 24px;
     padding-left: 40px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 #b2 {
@@ -231,10 +234,21 @@ body{
 
 #a3 {
     color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 97%;
     text-align: justify;
     word-spacing: 10px;
-    font-size: 25px;
+    font-size: 24px;
+    padding-left: 40px;
+}
+
+#f1{
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 97%;
+    text-align: justify;
+    word-spacing: 10px;
+    font-size: 24px;
     padding-left: 40px;
 }
 
@@ -302,7 +316,7 @@ body{
     width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
-    font-size: 26px;
+    font-size: 24px;
     padding-left: 80px;
 }
 
@@ -310,7 +324,7 @@ body{
     width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
-    font-size: 26px;
+    font-size: 24px;
 
 }
 
@@ -318,7 +332,7 @@ body{
     width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
-    font-size: 26px;
+    font-size: 24px;
 }
 
 .parts {
@@ -338,7 +352,7 @@ body{
     width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
-    font-size: 26px;
+    font-size: 24px;
     padding-left: 80px;
 }
 
@@ -351,7 +365,7 @@ body{
     width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
-    font-size: 26px;
+    font-size: 24px;
 }
 
 #a9 {
@@ -363,7 +377,7 @@ body{
     width: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
-    font-size: 26px;
+    font-size: 24px;
 }
 
 .main3 {
@@ -399,7 +413,7 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     word-spacing: 10px;
     padding-left: 100px;
-    font-size: 26px;
+    font-size: 24px;
 }
 
 #main5 {
